--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,27 +5,27 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (console)",
+            "name": "Epipolar Demo",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/__PROJECT_NAME__.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/Aardvark.Reconstruction.Epipolar.Demo.dll",
             "args": [],
             "cwd": "${workspaceFolder}/bin/Debug/netcoreapp2.0/",
-            "console": "internalConsole",
+            "console": "externalTerminal",
             "stopAtEntry": false,
-            "internalConsoleOptions": "openOnSessionStart"
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/__PROJECT_NAME__.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/Aardvark.Reconstruction.Epipolar.Demo.dll",
             "args": [],
             "cwd": "${workspaceFolder}/bin/Debug/netcoreapp2.0/",
             "stopAtEntry": false,
-            "internalConsoleOptions": "openOnSessionStart",
+            "internalConsoleOptions": "neverOpen",
             "launchBrowser": {
                 "enabled": true,
                 "args": "${auto-detect-url}",
