--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/Aardvark.Reconstruction.Epipolar.Demo.dll",
             "args": [],
             "cwd": "${workspaceFolder}/bin/Debug/netcoreapp2.0/",
-            "console": "externalTerminal",
+            "console": "integratedTerminal",
             "stopAtEntry": false,
             "internalConsoleOptions": "neverOpen"
         },
