--- a/src/Aardvark.Reconstruction.Epipolar.Demo/Aardvark.Reconstruction.Epipolar.Demo.fsproj
+++ b/src/Aardvark.Reconstruction.Epipolar.Demo/Aardvark.Reconstruction.Epipolar.Demo.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="Generators.fs" />
     <Compile Include="FundamentalChecker.fs" />
     <Compile Include="PerfectDemos.fs" />
+    <Compile Include="ArbDemo.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
