--- a/src/Aardvark.Reconstruction.Epipolar.Demo/Aardvark.Reconstruction.Epipolar.Demo.fsproj
+++ b/src/Aardvark.Reconstruction.Epipolar.Demo/Aardvark.Reconstruction.Epipolar.Demo.fsproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <Compile Include="Generators.fs" />
     <Compile Include="FundamentalChecker.fs" />
+    <Compile Include="RunStats.fs" />
     <Compile Include="PerfectDemos.fs" />
     <Compile Include="ArbDemo.fs" />
     <Compile Include="Program.fs" />
