--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,19 @@
             "console": "integratedTerminal",
             "stopAtEntry": false,
             "internalConsoleOptions": "neverOpen"
-        },        
+        },
+        {
+            "name": "ModelEstimation Demo",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/Aardvark.Reconstruction.ModelEstimation.Demo.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp2.0/",
+            "console": "integratedTerminal",
+            "stopAtEntry": false,
+            "internalConsoleOptions": "neverOpen"
+        },       
         {
             "name": "Test",
             "type": "coreclr",
