--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,21 +9,21 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/Aardvark.Reconstruction.Epipolar.Demo.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Aardvark.Reconstruction.Epipolar.Demo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp2.0/",
+            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
             "console": "integratedTerminal",
             "stopAtEntry": false,
-            "internalConsoleOptions": "neverOpen"
+            "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "name": "ModelEstimation Demo",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/Aardvark.Reconstruction.ModelEstimation.Demo.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Aardvark.Reconstruction.ModelEstimation.Demo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp2.0/",
+            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
             "console": "integratedTerminal",
             "stopAtEntry": false,
             "internalConsoleOptions": "neverOpen"
@@ -33,9 +33,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/Test.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Test.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp2.0/",
+            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
             "console": "integratedTerminal",
             "stopAtEntry": false,
             "internalConsoleOptions": "neverOpen"
@@ -45,9 +45,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/Aardvark.Reconstruction.Epipolar.Demo.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Aardvark.Reconstruction.Epipolar.Demo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp2.0/",
+            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
             "stopAtEntry": false,
             "internalConsoleOptions": "neverOpen",
             "launchBrowser": {
