--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,10 @@
             "label": "build",
             "command": "dotnet build src/Aardvark.Reconstruction.sln",
             "type": "shell",
-            "group": "build",
+            "group": {  
+                "kind": "build",
+                "isDefault": true
+            },
             "presentation": {
                 "reveal": "silent"
             },
