--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,8 @@
                 "isDefault": true
             },
             "presentation": {
-                "reveal": "silent"
+                "reveal": "always",
+                "clear": true
             },
             "problemMatcher": "$msCompile"
         }
