--- a/src/Epipolar.UnitTest/Epipolar.UnitTest.fsproj
+++ b/src/Epipolar.UnitTest/Epipolar.UnitTest.fsproj
@@ -2,7 +2,6 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug\</OutputPath>
@@ -12,11 +11,11 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Aardvark.Reconstruction\Aardvark.Reconstruction.fsproj" />
-    <ProjectReference Include="..\Aardvark.Reconstruction.Epipolar.Demo\Aardvark.Reconstruction.Epipolar.Demo.fsproj" />
+    <ProjectReference Include="..\Epipolar.Demo\Epipolar.Demo.fsproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RunStats.fs" />
-    <Compile Include="ArbDemo.fs" />
+    <Compile Include="Gen.fs" />
+    <Compile Include="Tests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
