--- a/src/ModelEstimation.UnitTest/ModelEstimation.UnitTest.fsproj
+++ b/src/ModelEstimation.UnitTest/ModelEstimation.UnitTest.fsproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug\</OutputPath>
@@ -11,11 +12,9 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Aardvark.Reconstruction\Aardvark.Reconstruction.fsproj" />
-    <ProjectReference Include="..\Aardvark.Reconstruction.Epipolar.Demo\Aardvark.Reconstruction.Epipolar.Demo.fsproj" />
+    <ProjectReference Include="..\Epipolar.Demo\Epipolar.Demo.fsproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gen.fs" />
-    <Compile Include="Tests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
