--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Aardvark.Reconstruction.Epipolar.Demo.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Epipolar.Demo.dll",
             "args": [],
             "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
             "console": "integratedTerminal",
@@ -20,7 +20,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Aardvark.Reconstruction.Epipolar.UnitTest.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Epipolar.UnitTest.dll",
             "args": [],
             "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
             "console": "integratedTerminal",
@@ -32,7 +32,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Aardvark.Reconstruction.ModelEstimation.Demo.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/ModelEstimation.Demo.dll",
             "args": [],
             "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
             "console": "integratedTerminal",
@@ -56,7 +56,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Aardvark.Reconstruction.Epipolar.Demo.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Epipolar.Demo.dll",
             "args": [],
             "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
             "stopAtEntry": false,
