--- a/src/Test/Test.fsproj
+++ b/src/Test/Test.fsproj
@@ -13,5 +13,8 @@
   <ItemGroup>
     <Compile Include="Program.fs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LensFunSharp\LensFunSharp.fsproj" />
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
