--- a/src/Aardvark.Reconstruction/Aardvark.Reconstruction.fsproj
+++ b/src/Aardvark.Reconstruction/Aardvark.Reconstruction.fsproj
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -10,6 +11,7 @@
     <OutputPath>..\..\bin\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="paket.references" />
     <Compile Include="Camera/CameraView.fs" />
     <Compile Include="Camera/Distortion.fs" />
     <Compile Include="Camera/Projection.fs" />
