--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Epipolar.Demo.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/Epipolar.Demo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
+            "cwd": "${workspaceFolder}/bin/Debug/net6.0/",
             "console": "integratedTerminal",
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart"
@@ -20,9 +20,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Epipolar.UnitTest.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/Epipolar.UnitTest.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
+            "cwd": "${workspaceFolder}/bin/Debug/net6.0/",
             "console": "integratedTerminal",
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart"
@@ -32,9 +32,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/ModelEstimation.Demo.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/ModelEstimation.Demo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
+            "cwd": "${workspaceFolder}/bin/Debug/net6.0/",
             "console": "integratedTerminal",
             "stopAtEntry": false,
             "internalConsoleOptions": "neverOpen"
@@ -44,9 +44,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Test.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/Test.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
+            "cwd": "${workspaceFolder}/bin/Debug/net6.0/",
             "console": "integratedTerminal",
             "stopAtEntry": false,
             "internalConsoleOptions": "neverOpen"
@@ -56,9 +56,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Epipolar.Demo.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/Epipolar.Demo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1/",
+            "cwd": "${workspaceFolder}/bin/Debug/net6.0/",
             "stopAtEntry": false,
             "internalConsoleOptions": "neverOpen",
             "launchBrowser": {
