--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,14 +28,14 @@ jobs:
       - name: Pack
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: dotnet aardpack src\Aardvark.Reconstruction.sln --norelease --notag
+        run: dotnet aardpack src\Aardvark.Reconstruction.sln
       - name: Upload Packages
         uses: actions/upload-artifact@v2
         with:
           name: packages
           path: bin\pack
-      # - name: NuGet
-      #   env:
-      #     NUGET_KEY: ${{ secrets.GITHUB_TOKEN }}
-      #   shell: cmd
-      #   run: dotnet nuget push "bin\pack\*.nupkg" -k %NUGET_KEY% -s "https://nuget.pkg.github.com/aardworx/index.json" --skip-duplicate
+      - name: NuGet
+        env:
+          NUGET_KEY: ${{ secrets.GITHUB_TOKEN }}
+        shell: cmd
+        run: dotnet nuget push "bin\pack\*.nupkg" -k %NUGET_KEY% -s "https://nuget.pkg.github.com/aardworx/index.json" --skip-duplicate
