--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "packages": true,
         "paket-files": true,
         ".gitignore": true,
-        "**/obj/": true
+        "**/obj/": true,
+        ".ionide": true
     },
     "terminal.integrated.env.linux": {
         "LD_LIBRARY_PATH": "."
