--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Pack
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: dotnet aardpack src\Aardvark.Reconstruction.sln
+        run: dotnet aardpack src\Aardvark.Reconstruction.sln --notag
       - name: Upload Packages
         uses: actions/upload-artifact@v2
         with:
